Closed Bug 487960 Opened 15 years ago Closed 15 years ago

Missing symbol nsIDOMPkcs11 (linux xulrunner builds failed on 20090411)

Categories

(Core Graveyard :: Java to XPCOM Bridge, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: nthomas, Assigned: jhpedemonte)

References

Details

Compiling Java interfaces
find ../../../../_javagen/default -name "*.java"  ! -name "*nsIPref.java" > java.files
/usr/bin/perl /builds/moz2_slave/mozilla-central-linux64-xulrunner/build/extensions/java/xpcom/interfaces/gen-nsError.pl < /builds/moz2_slave/mozilla-central-linux64-xulrunner/build/xpcom/base/nsError.h > org/mozilla/xpcom/IXPCOMError.java
"/tools/jdk/bin/javac" -source 1.4 -classpath _ifaces 		\
		-d _ifaces -sourcepath ../../../../_javagen/default @java.files
../../../../_javagen/default/org/mozilla/interfaces/nsIDOMWindowInternal.java:41: cannot find symbol
symbol  : class nsIDOMPkcs11
location: interface org.mozilla.interfaces.nsIDOMWindowInternal
  nsIDOMPkcs11 getPkcs11();
  ^
1 error
make[6]: *** [_ifaces/org/mozilla/interfaces/nsISupports.class] Error 1

Regression range:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=00e6498d0743&tochange=e002cdfb86c1
so setting blocking on bug 326628.
Was this a clobber build? This sounds like depend build bustage from removing an interface.
The xulrunner builds run like nightlies and clobber early on ("rm -rf build" in the log). Both objdir and source are removed.

http://mxr.mozilla.org/mozilla-central/source/dom/interfaces/base/nsIDOMWindowInternal.idl#84
seems to be what yields
  nsIDOMPkcs11 getPkcs11();
at line 41 in 
  <objdir>/_javagen/default/org/mozilla/interfaces/nsIDOMWindowInternal.java
Bug 486513 moved the builds to the XULRunner waterfall from Firefox/Firefox3.5.
Fixed by the patch in bug 487990
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
(In reply to comment #4)
> Fixed by the patch in bug 487990

Just a minor correction:
It has indeed been fixed, but thanks to the patch of bug 487980. :-)
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.