Bug 487960 and bug 487980 - remove references to nsIDOMPkcs11 completely: various pieces of our code don't like interfaces that are only forward-declared even if you never implement them r=jst